For programmers/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-go-prog
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: sample-go-prog
    ver: "0.0.1"
