For programmers/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-go-prog
spec:
  rules:
  - host: www.kryukov.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sample-go-prog
            port: 
              name: http
